<resources>
    <string name="app_name">Nearby</string>
    <string name="map_key" translatable="false">AIzaSyBC8rG3Pm4TYeTkAiqrqhAEB3X2jk3HvpA</string>
    <string name="select_photo">Select Photo</string>
    <string name="opencamera">Camera</string>
    <string name="pick_from_gallery">Gallery</string>
    <string name="permissionRequired">Permission Required</string>
    <string name="openSettings">Open Settings</string>
    <string name="select_any_option">Select any option</string>
    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="gps_required">GPS is required you be turned on</string>
    <string name="ok2">Ok</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_apple">Login with Apple</string>
    <string name="login_with_email">Login with email</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_to_your_user_profile">Login to your \nuser profile.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="display">Display</string>
    <string name="sign_in">sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password2">Forgot\npassword?</string>
    <string name="or">or</string>
    <string name="please_enter_your_email_address_and_we_will_send_your_password_by_email">Please enter your email address and we will send your password by email.</string>
    <string name="send_request">Send Request</string>
    <string name="finish_your_profile">Finish Your\nProfile.</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="by_signing_up_you_are_agree_with_our">by signing up you are agree with our </string>
    <string name="and">and</string>
    <string name="aleady_have_an_account">Already have an account?</string>
    <string name="referral_code">Referral Code</string>
    <string name="sign_in_2">Sign in</string>
    <string name="login">Login</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="your_new_password_must_have_at_least_6_characters_and_one_captialized_letter">Your new password must have at least 6\ncharacters and one captialized letter.</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="_300m_away">300m away</string>
    <string name="starbucks">Starbucks</string>
    <string name="let_s_meet_and_talk">Let’s meet and talk.</string>
    <string name="map">Map</string>
    <string name="say_hello_to_these_people">Say hello to these people!</string>
    <string name="notifications">Notifications</string>
    <string name="brooklyn_simmons">Brooklyn Simmons</string>
    <string name="you_are_friends">You are friends! 🎉</string>
    <string name="today">Today</string>
    <string name="events_nearby">Events Nearby</string>
    <string name="_5km_away_from_you">5km away from you.</string>
    <string name="let_s_co_work">Let’s Co-work</string>
    <string name="online_now">Online Now</string>
    <string name="friends">Friends</string>
    <string name="juliana_18">Juliana, 18</string>
    <string name="view_more">View more</string>
    <string name="chats">Chats</string>
    <string name="search">Search...</string>
    <string name="type_here">Type here...</string>
    <string name="details">Details</string>
    <string name="time">Time</string>
    <string name="timedate">Time and Date</string>
    <string name="select_time">Select Time</string>
    <string name="location">Location</string>
    <string name="locationevent">Location of Event</string>
    <string name="new_event">New Event</string>
    <string name="finish">Finish</string>
    <string name="select_source">Select Source</string>
    <string name="camera">Camera</string>
    <string name="photo_library">Photo library</string>
    <string name="cancel">Cancel</string>
    <string name="recent_posts">Recent Posts</string>
    <string name="write_to_people_nearby">Write to people nearby...</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="snapchat">Snapchat</string>
    <string name="my_map">My Map</string>
    <string name="account">Account</string>
    <string name="personal_info">Personal Info</string>
    <string name="first_name">First Name</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="messages">Messages</string>
    <string name="people_who_sent_you_a_new_message">People who sent you a new message</string>
    <string name="new_friends">New Friends</string>
    <string name="friends_you_match_with">Friends you match with</string>
    <string name="requests">Requests</string>
    <string name="in_app_notification">In-app notification</string>
    <string name="people_who_wants_to_become_friends">People who wants to become friends</string>
    <string name="receive_in_app_notification">Receive in-app notification</string>
    <string name="tips">Tips</string>
    <string name="get_profile_tips_and_updates">Get profile tips and updates</string>
    <string name="for_taking_and_sending_pictures">For taking and sending pictures</string>
    <string name="voice">Voice</string>
    <string name="for_calling_and_video_calling">For calling and video calling</string>
    <string name="set_your_filter">Apply Your Filter</string>
    <string name="both">Both</string>
    <string name="all">All</string>
    <string name="online">Online</string>
    <string name="age">Age</string>
    <string name="apply">Apply</string>
    <string name="reset_filter">Reset Filter</string>
    <string name="new_1">New</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="your_first_name">Your First Name</string>
    <string name="your_last_name">Your Last Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="phone">Phone</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="enter_dob">Select DOB</string>
    <string name="gender">Gender</string>
    <string name="other">Other</string>
    <string name="biography">Biography</string>
    <string name="my_gallary">My Gallery</string>
    <string name="my_zodiac_sign">My Zodiac Sign</string>
    <string name="select_zodiac_sign">Select Zodiac Sign</string>
    <string name="switch_zodiac">Switch</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="enter_interested">Enter Interested</string>
    <string name="logan_wills">Logan\nWills</string>
    <string name="interested_in">Interested in</string>
    <string name="report">Report</string>
    <string name="discount">Discount</string>
    <string name="alert">Alert</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="block">Block</string>
    <string name="bio">Bio</string>
    <string name="zodiac_sign">Zodiac Sign</string>
    <string name="interests">Interests</string>
    <string name="gallary">Gallery</string>
    <string name="send">Send</string>
    <string name="search_1">Search</string>
    <string name="feedback">Feedback</string>
    <string name="upload_pic">Upload Pic</string>
    <string name="message">Message</string>
    <string name="write_here">Write here...</string>
    <string name="contact_us">Contact Us</string>
    <string name="submit">Submit</string>
    <string name="history">History</string>
    <string name="we_have">We have sent a verification\nE-mail on your E-mail. Please\ncheck and verify.</string>
    <string name="ok">Ok</string>
    <string name="open_with_animation">Animation</string>
    <string name="it_is_empty_here">It is empty here...</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="wave_and_say_hi">👋 Wave and say Hi!</string>
    <string name="start_chat">Start a chat</string>
    <string name="continue_to_swipe">Continue to Swipe</string>
    <string name="reset_account_password">Reset Account\nPassword</string>
    <string name="your_password_must_have_at_least_6_characters_and_one_capitalized_letter">Your password must have at least 6 characters and one capitalized letter.</string>
    <string name="request_password">Request Password</string>
    <string name="start_a_random_chat">Start a random chat</string>
    <string name="discover_everything_nearby">Discover\neverything\nnearby</string>
    <string name="remember_me">Remember me</string>
    <string name="select_location">Select Location</string>
    <string name="txt_validate_upload_your_image">Please upload your profile image</string>
    <string name="msg_email_address">Please enter email</string>
    <string name="msg_phone_address">Please enter Phone Number</string>
    <string name="msg_valid_email_address">Please enter valid email</string>
    <string name="msg_enter_password">Please enter password</string>
    <string name="msg_enter_experience">Please enter experience</string>
    <string name="msg_enter_number">Please enter phone number</string>
    <string name="msg_enter_bio">Please enter bio</string>
    <string name="msg_password_6">Password must be 6 characters long</string>
    <string name="msg_number_10">Phone Number must be 10 characters long</string>
    <string name="msg_new_password_6">New password must be 6 characters long</string>
    <string name="msg_name">Please enter first name</string>
    <string name="last_msg_name">Please enter last name</string>
    <string name="msg_select_address">Please select location</string>
    <string name="msg_select_performer_type">Please select performer type</string>
    <string name="msg_select_generes_type">Please select generes type</string>
    <string name="msg_select_sub_type">Please select subType</string>
    <string name="msg_select_artist_type">Please select artist type</string>
    <string name="msg_select_event_type">Please select event type</string>
    <string name="msg_cc">Please select country code</string>
    <string name="msg_phone">Please enter mobile number</string>
    <string name="msg_phone_invalid">Please enter valid mobile number</string>
    <string name="msg_enter_old_password">Please enter old password</string>
    <string name="msg_enter_new_password">Please enter new password</string>
    <string name="msg_please_enter_confirm_password">Please enter confirm password</string>
    <string name="msg_password_not_match">Password doesn\'t match</string>
    <string name="msg_enter_location">Please enter address</string>
    <string name="retry">Retry</string>
    <string name="connection_to_server_lost">Connection Lost</string>
    <string name="title_empty">"Please enter title "</string>
    <string name="details_empty">Please enter Details</string>
</resources>