<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/pbDialog"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_dialog"
        android:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clConnectionLost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvConnectionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/connection_to_server_lost"
            android:textColor="#000000"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCancelDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:padding="6dp"
            android:text="@string/cancel"
            android:textColor="#000000"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintStart_toStartOf="@id/tvConnectionText"
            app:layout_constraintTop_toBottomOf="@id/tvConnectionText" />

        <TextView
            android:id="@+id/tvRetryDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30sdp"
            android:padding="6dp"
            android:text="@string/retry"
            android:textColor="#000000"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="@id/tvConnectionText"
            app:layout_constraintTop_toBottomOf="@id/tvConnectionText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
