<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.authentication.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/goBack_forgot"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:padding="2dp"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black"></ImageView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:fontFamily="@font/worksans_black"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/forgot_password2"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goBack_forgot"
        app:layout_constraintVertical_bias="0.19" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="24dp"
        android:text="@string/please_enter_your_email_address_and_we_will_send_your_password_by_email"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/worksans_regular"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/forgot_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/round_shape"
        android:backgroundTint="@color/edittext_grey"
        android:hint="@string/email"
        android:paddingStart="16dp"
        android:fontFamily="@font/worksans_regular"
        android:paddingVertical="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

    </EditText>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/send_request_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_request"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="32dp"
        android:fontFamily="@font/worksans_black"
        android:paddingVertical="16dp"
        android:background="@drawable/round_shape"
        android:backgroundTint="@color/sky_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_email" />


</androidx.constraintlayout.widget.ConstraintLayout>