<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/user_pic"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/user_pic_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/circle_image_view"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/circle_4"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/user_pic"
            app:layout_constraintEnd_toEndOf="@+id/user_pic" />


        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/worksans_semibold"
            android:padding="3dp"
            android:text="@string/brooklyn_simmons"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/message_day"
            app:layout_constraintStart_toEndOf="@+id/user_pic"
            app:layout_constraintTop_toTopOf="@+id/user_pic" />

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/worksans_light"
            android:text="@string/you_are_friends"
            android:textColor="@color/dark_grey"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/message_day"
            app:layout_constraintStart_toEndOf="@+id/user_pic"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />


        <TextView
            android:id="@+id/message_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/worksans_light"
            android:text="@string/today"
            android:textColor="@color/dark_grey"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/tvMessage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvName">

        </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>